@@ -1,3 +1,12 @@
+2008-01-05  Sylvain Pasche  <sylvain.pasche@gmail.com>
+
+        Reviewed by Alp Toker.
+
+        http://bugs.webkit.org/show_bug.cgi?id=16736
+        Allow autogen.sh invocation from a separate build directory.
+
+        * autogen.sh:
+
 2008-01-04  Alp Toker  <alp@atoker.com>
 
         Rubber-stamped by Mark Rowe.
